--- a/Saberfall/Saberfall.vcxproj.filters
+++ b/Saberfall/Saberfall.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="EngineComponent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="InputProcessor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MessageBus.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\SFML\Audio\AlResource.hpp">
@@ -324,6 +330,12 @@
       <Filter>Header Files\SFML</Filter>
     </ClInclude>
     <ClInclude Include="EngineComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="InputProcessor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MessageBus.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
