--- a/Saberfall/Saberfall.vcxproj
+++ b/Saberfall/Saberfall.vcxproj
@@ -121,7 +121,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="EngineComponent.cpp" />
+    <ClCompile Include="InputProcessor.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MessageBus.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EngineComponent.h" />
@@ -219,6 +221,8 @@
     <ClInclude Include="include\SFML\Window\Window.hpp" />
     <ClInclude Include="include\SFML\Window\WindowHandle.hpp" />
     <ClInclude Include="include\SFML\Window\WindowStyle.hpp" />
+    <ClInclude Include="InputProcessor.h" />
+    <ClInclude Include="MessageBus.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="include\SFML\Audio\SoundFileFactory.inl" />
